Decrease font size in CTA buttons on full screen ad to prevent clipping

--- a/css/popbounce.less
+++ b/css/popbounce.less
@@ -175,7 +175,7 @@
 
         span {
           font-weight: normal;
-          font-size: 55%;
+          font-size: 50%;
         }
       }
     }
